--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,9 @@ jobs:
 
       - name: Build
         run: CI=false npm run build
+        env:
+          VITE_APP_LOGIN_EMAIL: ${{ secrets.VITE_APP_LOGIN_EMAIL }}
+          VITE_APP_LOGIN_PASSWORD: ${{ secrets.VITE_APP_LOGIN_PASSWORD }}
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
