--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,4 +41,6 @@ jobs:
         run: |
           aws s3 sync ${{ env.BUILD_PATH }} s3://${{ secrets.AWS_S3_BUCKET }} --delete
   
-    
+      - name: Invalidate CloudFront cache
+        run: |
+          aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
