--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/x-date-pickers": "^7.17.0",
     "@types/react-router-dom": "^5.3.3",
     "dayjs": "^1.11.13",
+    "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
