--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/x-date-pickers": "^7.17.0",
     "@types/react-router-dom": "^5.3.3",
     "dayjs": "^1.11.13",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.441.0",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
