Base of notification view

--- a/.gitignore
+++ b/.gitignore
@@ -213,4 +213,6 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+.idea/*
+
 # End of https://www.toptal.com/developers/gitignore/api/node,macos,windows,react
